# OptimizationUtils

./: .gitignore  .project  .pydevproject  CMakeLists.txt  README.md  install.sh  package.xml  requirements.txt  setup.py  sparse_matrix.csv
OptimizationUtils/: KeyPressManager.py  OptimizationUtils.py  tf.py  utilities.py
OptimizationUtils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
opt_utils/: opt_utils.py
test/: camera_pose_oc_dataset.py  color_balancing_oc_dataset.py  cosine_fitting.py  example_using_lambdas.py  eye_to_base_calib.py  global_color_balancing_oc_dataset.py  graphs.py  multiCalib.py  pose_and_color_oc_dataset.py  projection_based_color_balancing_oc_dataset.py  projection_based_lab_correction.py  sensor_pose_json.py  test.py  test_tinytf_vs_gettransform.py  two_camera_caliibration.py
test/ball_detection/: 4balls  ball_detection.py  ball_detection_mr.py
test/cosine_fitting/: cosine_fitting.py
test/gaussian_mixture_models/: gmm.py
test/general_hand_eye/: general_hand_eye.py  visualization.py
test/hand_in_eye/: eye_to_base_calib.py  eye_to_base_calib_miguel.py  visualization.py
test/others/: test_key_press_manager.py
test/point_cloud_to_point_cloud/: cow.ply  little_cow.ply  multiCalib.py  old.py  pc2pc_calibration.py
test/sensor_pose_json_v2/: calibcamera.py  chessboard.py  dataset_sample.py  getter_and_setters.py  getters_and_setters.py  kalibr2_txt_to_json.py  main.py  main_ros_visualization.py  matlab.json  objective_function.py  only_cameras.py  only_cameras2.py  results_visualization.py  stereocalib_v2.py  visualization.py
(+29 files in other folders)
